--- a/index.html
+++ b/index.html
@@ -1,26 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Snake Game</title>
-	<link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Snake Game</title>
+<style>
+  body {
+    background: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  canvas {
+    background: #111;
+    display: block;
+  }
+</style>
 </head>
 <body>
-	<div id="game-container">
-		<canvas id="gc" class="game-canvas" width="400" height="400"></canvas>
-	</div>
-	<div class="keys">
-	  <a class="up arr" onclick="Snake.action('up')">
-	    <i class="chevron up"></i></a>
-	  <br />
-	  <a class="left arr" onclick="Snake.action('left')">
-	    <i class="chevron left"></i></a>
-	  <a class="down arr" onclick="Snake.action('down')">
-	    <i class="chevron down"></i></a>
-	  <a class="right arr" onclick="Snake.action('right')">
-	    <i class="chevron right"></i></a>
-	</div>
-	<script type="text/javascript" src="game.js"></script>
+<canvas id="game" width="400" height="400"></canvas>
+
+<script>
+const canvas = document.getElementById('game');
+const ctx = canvas.getContext('2d');
+
+const scale = 20;
+const rows = canvas.height / scale;
+const columns = canvas.width / scale;
+
+let snake = [];
+snake[0] = { x: 10 * scale, y: 10 * scale };
+
+let food = {
+  x: Math.floor(Math.random() * columns) * scale,
+  y: Math.floor(Math.random() * rows) * scale
+};
+
+let dx = scale;
+let dy = 0;
+let score = 0;
+
+function draw() {
+  ctx.fillStyle = '#111';
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+  // Draw snake
+  ctx.fillStyle = '#0f0';
+  snake.forEach(part => ctx.fillRect(part.x, part.y, scale, scale));
+
+  // Draw food
+  ctx.fillStyle = '#f00';
+  ctx.fillRect(food.x, food.y, scale, scale);
+
+  // Move snake
+  let head = { x: snake[0].x + dx, y: snake[0].y + dy };
+
+  // Check collisions
+  if(head.x < 0 || head.x >= canvas.width || head.y < 0 || head.y >= canvas.height || collision(head, snake)){
+    alert("Game Over! Score: " + score);
+    snake = [{ x: 10 * scale, y: 10 * scale }];
+    dx = scale;
+    dy = 0;
+    score = 0;
+    return;
+  }
+
+  snake.unshift(head);
+
+  // Eat food
+  if(head.x === food.x && head.y === food.y){
+    score++;
+    food = {
+      x: Math.floor(Math.random() * columns) * scale,
+      y: Math.floor(Math.random() * rows) * scale
+    };
+  } else {
+    snake.pop();
+  }
+}
+
+function collision(head, array){
+  for(let i = 0; i < array.length; i++){
+    if(head.x === array[i].x && head.y === array[i].y) return true;
+  }
+  return false;
+}
+
+window.addEventListener('keydown', e => {
+  const key = e.key;
+  if(key === 'ArrowUp' && dy === 0){ dx = 0; dy = -scale; }
+  else if(key === 'ArrowDown' && dy === 0){ dx = 0; dy = scale; }
+  else if(key === 'ArrowLeft' && dx === 0){ dx = -scale; dy = 0; }
+  else if(key === 'ArrowRight' && dx === 0){ dx = scale; dy = 0; }
+});
+
+setInterval(draw, 100);
+</script>
 </body>
 </html>
