--- a/index.html
+++ b/index.html
@@ -3,24 +3,60 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snake Game</title>
+<title>Snake Game (Mobile Friendly)</title>
 <style>
   body {
     background: #000;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    height: 100vh;
+    justify-content: center;
     margin: 0;
+    height: 100vh;
   }
   canvas {
     background: #111;
     display: block;
+    margin-bottom: 20px;
+    touch-action: none; /* prevent scrolling on mobile */
+  }
+  .controls {
+    display: grid;
+    grid-template-columns: repeat(3, 60px);
+    grid-template-rows: repeat(3, 60px);
+    gap: 10px;
+  }
+  .controls button {
+    font-size: 24px;
+    background: #222;
+    color: #fff;
+    border: 2px solid #555;
+    border-radius: 10px;
+  }
+  .controls button:active {
+    background: #555;
+  }
+  .empty {
+    background: transparent;
+    border: none;
   }
 </style>
 </head>
 <body>
+
 <canvas id="game" width="400" height="400"></canvas>
+
+<div class="controls">
+  <div class="empty"></div>
+  <button id="up">⬆</button>
+  <div class="empty"></div>
+  <button id="left">⬅</button>
+  <div class="empty"></div>
+  <button id="right">➡</button>
+  <div class="empty"></div>
+  <button id="down">⬇</button>
+  <div class="empty"></div>
+</div>
 
 <script>
 const canvas = document.getElementById('game');
@@ -30,9 +66,7 @@ const scale = 20;
 const rows = canvas.height / scale;
 const columns = canvas.width / scale;
 
-let snake = [];
-snake[0] = { x: 10 * scale, y: 10 * scale };
-
+let snake = [{ x: 10 * scale, y: 10 * scale }];
 let food = {
   x: Math.floor(Math.random() * columns) * scale,
   y: Math.floor(Math.random() * rows) * scale
@@ -42,6 +76,7 @@ let dx = scale;
 let dy = 0;
 let score = 0;
 
+// Draw function
 function draw() {
   ctx.fillStyle = '#111';
   ctx.fillRect(0, 0, canvas.width, canvas.height);
@@ -57,7 +92,7 @@ function draw() {
   // Move snake
   let head = { x: snake[0].x + dx, y: snake[0].y + dy };
 
-  // Check collisions
+  // Collision check
   if(head.x < 0 || head.x >= canvas.width || head.y < 0 || head.y >= canvas.height || collision(head, snake)){
     alert("Game Over! Score: " + score);
     snake = [{ x: 10 * scale, y: 10 * scale }];
@@ -88,6 +123,7 @@ function collision(head, array){
   return false;
 }
 
+// Keyboard input
 window.addEventListener('keydown', e => {
   const key = e.key;
   if(key === 'ArrowUp' && dy === 0){ dx = 0; dy = -scale; }
@@ -96,7 +132,14 @@ window.addEventListener('keydown', e => {
   else if(key === 'ArrowRight' && dx === 0){ dx = scale; dy = 0; }
 });
 
+// Mobile buttons
+document.getElementById('up').addEventListener('touchstart', ()=>{ if(dy===0){ dx=0; dy=-scale; } });
+document.getElementById('down').addEventListener('touchstart', ()=>{ if(dy===0){ dx=0; dy=scale; } });
+document.getElementById('left').addEventListener('touchstart', ()=>{ if(dx===0){ dx=-scale; dy=0; } });
+document.getElementById('right').addEventListener('touchstart', ()=>{ if(dx===0){ dx=scale; dy=0; } });
+
 setInterval(draw, 100);
 </script>
+
 </body>
 </html>
