--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snake Game (Wrap Walls + Fast)</title>
+<title> nokia Snake Game </title>
 <style>
   body {
     background: #000;
@@ -75,7 +75,7 @@ let dx = scale;
 let dy = 0;
 let score = 0;
 
-// Draw and update function
+// Draw & update function
 function draw() {
   ctx.fillStyle = '#111';
   ctx.fillRect(0, 0, canvas.width, canvas.height);
@@ -83,7 +83,7 @@ function draw() {
   // Move snake
   let head = { x: snake[0].x + dx, y: snake[0].y + dy };
 
-  // Wall wrap-around
+  // Wrap-around (invisible wall) — Snake reappears on opposite side
   if(head.x >= canvas.width) head.x = 0;
   else if(head.x < 0) head.x = canvas.width - scale;
   if(head.y >= canvas.height) head.y = 0;
@@ -140,9 +140,8 @@ function setDirection(x, y){
   else if(dy === 0 && y !== 0) { dx = 0; dy = y; }
 }
 
-// Touch event - fast and responsive
-const btns = ['up','down','left','right'];
-btns.forEach(id => {
+// Fast responsive touch buttons
+['up','down','left','right'].forEach(id => {
   const el = document.getElementById(id);
   el.addEventListener('touchstart', (e)=>{
     e.preventDefault();
@@ -153,9 +152,9 @@ btns.forEach(id => {
   }, {passive:false});
 });
 
-// 60 FPS
-setInterval(draw, 1000/60); // ~16ms per frame
-</script>
+// 60 FPS smooth game
+setInterval(draw, 1000/60);
 
+</script>
 </body>
 </html>
