--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snake Game (Dynamic Speed)</title>
+<title>Snake Game (Mobile Keypad)</title>
 <style>
   body {
     background: #000;
@@ -48,6 +48,7 @@
 
 <canvas id="game" width="500" height="500"></canvas>
 
+<!-- Mobile keypad buttons -->
 <div class="controls">
   <div class="empty"></div>
   <button id="up">⬆</button>
@@ -77,8 +78,8 @@ let score = 0;
 
 // Speed control
 let baseSpeed = 5; // initial speed
-let maxSpeed = 20; // max speed
-let speed = baseSpeed; 
+let maxSpeed = 20; 
+let speed = baseSpeed;
 let lastTime = 0;
 
 // Keyboard input
@@ -90,15 +91,15 @@ window.addEventListener('keydown', e => {
   else if(key === 'ArrowRight' && dx === 0){ dx = scale; dy = 0; }
 });
 
-// Mobile buttons
+// Mobile keypad buttons
 function setDirection(x, y){
-  if(dx === 0 && x !== 0) { dx = x; dy = 0; }
-  else if(dy === 0 && y !== 0) { dx = 0; dy = y; }
+  if(dx === 0 && x !== 0){ dx = x; dy = 0; }
+  else if(dy === 0 && y !== 0){ dx = 0; dy = y; }
 }
 
 ['up','down','left','right'].forEach(id => {
   const el = document.getElementById(id);
-  el.addEventListener('touchstart', (e)=>{
+  el.addEventListener('touchstart', e => {
     e.preventDefault();
     if(id==='up') setDirection(0,-scale);
     else if(id==='down') setDirection(0,scale);
@@ -110,7 +111,7 @@ function setDirection(x, y){
 // Main game loop
 function gameLoop(timestamp){
   if(!lastTime) lastTime = timestamp;
-  const interval = 1000 / speed; // dynamic interval
+  const interval = 1000 / speed;
   if(timestamp - lastTime > interval){
     lastTime = timestamp;
     update();
@@ -119,14 +120,13 @@ function gameLoop(timestamp){
   requestAnimationFrame(gameLoop);
 }
 
-// Update snake position & logic
+// Update snake
 function update(){
-  // Increase speed as snake grows
   speed = baseSpeed + Math.min(snake.length-1, maxSpeed-baseSpeed);
-
+  
   let head = { x: snake[0].x + dx, y: snake[0].y + dy };
 
-  // Invisible walls (wrap-around)
+  // Invisible walls
   if(head.x >= canvas.width) head.x = 0;
   else if(head.x < 0) head.x = canvas.width - scale;
   if(head.y >= canvas.height) head.y = 0;
@@ -164,7 +164,7 @@ function draw(){
 }
 
 function collision(head, array){
-  for(let i=0; i<array.length; i++){
+  for(let i=0;i<array.length;i++){
     if(head.x === array[i].x && head.y === array[i].y) return true;
   }
   return false;
